--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -1,11 +1,9 @@
-upstream client {
-  server client:3000;
+server {
+  listen 3000;
 
   location / {
     root /usr/share/nginx/html;
-    index index.html  index.htm;
+    index index.html index.htm;
     try_files $uri $uri/ /index.html;
   }
 }
-
-
